osha.theme Changelog
====================

1.4.21 (unreleased)
-------------------

- Display the publication date to everyone [deroiste] #3759
- Anchoring user.gif to the portal root [deroiste] #3937
- Do not link the breadcrumb to Home when on the language root page
  [deroiste] #3756
- Display oshmail newsletters in a fancybox overlay [deroiste] #3762


1.4.20 (2011-11-09)
-------------------

- Change the title of the pressroom view, css fixes #3846 [deroiste]
- Changed ram-caching in image and events portlets, to allow for parallel
  use under http and https #3872 [thomasw]
- Change the osha_help_center_view to make the category title a link
  #2385 [deroiste]
- Change the oshnews-view to filter by SEP Subject #3806 [deroiste]

1.4.19 (2011-10-20)
-------------------

- Bugfix for layout of the multimedia-image-details-view when images
  have very long titles refs #1555 [deroiste]
- multimedia-image-details-view don't squash portrait thumbnails #3846
  [deroiste]
- i18n fixes on the RSS feeds view #2081 [thomasw]

1.4.18 (2011-10-04)
-------------------

- If no or incorrect film id is passed to the NAPO episose view, redirect to the
  film overview #3799 [thomasw]

1.4.17 (2011-09-21)
-------------------

- Bugfix, adding social buttons to the shortmessage template #3228
  [deroiste]
- Adding the new multimedia views and sharing the structure for the
  napofilms listing between both portals #1555 [deroiste]
- Changed episode view on napofilm so that the film's title and description are
  displayed [thomasw]
- On Press Releases, display "News Release" #3482; special handling also for
  short messages [thomasw]


1.4.16 (2011-07-21)
-------------------

- Bugfix in osha items portlet. Don't return a link when the portletlink hasn't
  been set. [jcbrand]
- Leaner display of outdated items in listings [thomasw]


1.4.15 (2011-07-07)
-------------------

- Bugfix for FAQ view #2385 [deroiste]
- Change the order of the languages in the short messages #3228