@@ -96,10 +96,10 @@
 
                   <div class="field">
 
-                    <!-- 
+                    <!--
                        Disabling the "database" selector, as it leads to a logical problem.
                       -->
-                    <!--   
+                    <!--
                        <label i18n:translate="label_database"> Database </label>
                        <br />
 
@@ -115,7 +115,7 @@
                                                 checked python: 'checked' and T[2] or ''" />
                          <span tal:content="python:T[0]" ></span>
                        </div>
-                       <input type="hidden" name="search_portal_types:list" 
+                       <input type="hidden" name="search_portal_types:list"
                               tal:attributes="value get_search_portal_type" />
                        -->
 
@@ -202,8 +202,8 @@
                      i18n:domain="plone"
                      i18n:attributes="value label_search;"
                      />
-              <input  class="context" 
-                      type="reset" 
+              <input  class="context"
+                      type="reset"
                       value="Reset"
                       i18n:domain="osha"
                       i18n:attributes="value Reset"
